<resources>
    <string name="app_name">KinGSportswear</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment">Login Fragment</string>
    <string name="register_fragment">Register Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="core_fragment">Core Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="or">Or</string>
    <string name="admin">Admin</string>
    <string name="member">Member</string>

    <string name="error_system">System Error</string>
    <string name="wrong_email_or_pass">Wrong email or password</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_fill_all_field">Please Fill All Above Fields</string>
    <string name="register_success">Register Success</string>
    <string name="register_failed">Register Failed</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="register_success_dialog_description">Let\'s explore our store!</string>

    <string name="login_title">Let\'s get started</string>
    <string name="register_title">Where it all begins</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="login_google">Continue with Google</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="remove_search_filter">Remove Search Filter</string>
    <string name="profile">Profile</string>
    <string name="edit_personal_info">Edit Personal Information</string>
    <string name="language_settings">Language Setting</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>

    <string name="default_profile_name">Deez Nut</string>

    <string name="search_hint">Search for products…</string>
    <string name="choose_category">Choose category…</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="shoes">Shoes</string>
    <string name="clothes">Clothes</string>
    <string name="bag">Bag</string>
    <string name="others">Others</string>
    <string name="search_results">Search Results</string>
    <string name="description">Description</string>
    <string name="add_to_cart">       Add to Cart</string>
    <string name="select_size">       Select Size</string>
    <string name="no_result_found">No result found</string>

    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_category">Product Category</string>
    <string name="product_list_fragment">Product List Fragment</string>
    <string name="product_detail_fragment">Product Detail Fragment</string>
    <string name="weak_password">Password should be at least 6 characters</string>

</resources>