<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/CoreFragment">
    <fragment
        android:id="@+id/CoreFragment"
        android:name="com.example.kingsportswear.presentation.core.CoreFragment"
        android:label="@string/core_fragment"
        tools:layout="@layout/fragment_core">
        <action
            android:id="@+id/action_CoreFragment_to_ProductListFragment"
            app:destination="@id/ProductListFragment" />
    </fragment>
    <fragment
        android:id="@+id/ProductListFragment"
        android:name="com.example.kingsportswear.presentation.product_list.ProductListFragment"
        android:label="@string/product_list_fragment"
        tools:layout="@layout/fragment_product_list">
        <action
            android:id="@+id/action_ProductListFragment_to_ProductDetailFragment"
            app:destination="@id/ProductDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/ProductDetailFragment"
        android:name="com.example.kingsportswear.presentation.product_detail.ProductDetailFragment"
        android:label="@string/product_detail_fragment"
        tools:layout="@layout/fragment_product_detail">
    </fragment>
</navigation>