<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".presentation.login.LoginFragment">

    <TextView
        android:id="@+id/tv_register_description"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/et_register_input_email"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_description"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/email"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_input_email"
        android:id="@+id/et_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="14dp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:cornerRadius="28dp"
        android:backgroundTint="@color/green"
        />
    <RelativeLayout
        android:id="@+id/divider_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
        android:layout_centerVertical="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_toStartOf="@id/tvText"
            android:background="@color/white"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32dp"
            android:layout_toEndOf="@id/tvText"
            android:background="@color/white"
            />
        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="OR"
            android:textColor="@color/white" />
    </RelativeLayout>
    <Button
        android:id="@+id/btn_register_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="14dp"
        android:drawableLeft="@drawable/ic_google"
        android:text="@string/login_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="28dp"
        android:backgroundTint="@color/white"
        />
    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/white"
            android:textSize="14dp"
            />
        <TextView
            android:id="@+id/tv_login_redirect_to_signup"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/primary300"
            android:textStyle="bold"
            android:clickable="true"
            android:textSize="14dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>