<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".presentation.profile.ProfileFragment">
    <LinearLayout
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edge_bottom"
        android:backgroundTint="@color/black"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            android:textStyle="bold" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:src="@drawable/default_profile_avatar"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="16dp"
            android:text="@string/default_profile_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/member"
            android:textColor="@color/white" />

        <LinearLayout
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_coin" />
            <TextView
                android:id="@+id/tv_coin"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="200" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_edit_personal_info"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="12dp"
        android:drawableLeft="@drawable/ic_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_personal_info"
        android:fontFamily="@font/roboto_regular"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textAlignment="viewStart"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/white"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_settings"
        android:textSize="14dp"
        />

    <LinearLayout
        android:id="@+id/btn_vietnamese"
        android:layout_marginTop="12dp"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edge_top"
        android:backgroundTint="@color/white"
        android:clickable="true"
        >
        <ImageView
            android:layout_marginLeft="16dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_vietnam_rounded"
            />
        <TextView
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vietnamese"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            />
    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:id="@+id/btn_english"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edge_bottom"
        android:backgroundTint="@color/white"
        android:clickable="true"
        >
        <ImageView
            android:layout_marginLeft="16dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_uk_rounded"
            />
        <TextView
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_logout"
        android:layout_marginTop="30dp"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:gravity="center"
        android:background="@drawable/rounded_edge_all"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout"
            app:tint="@color/red"
            />
        <TextView
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:fontFamily="@font/roboto_regular"
            />
    </LinearLayout>
</LinearLayout>