<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.product_detail.ProductDetailFragment">

    <!--    App Bar-->
    <RelativeLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/product_detail_app_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:theme="@style/Theme.KinGSportswear.AppBarOverlay">
        <ImageView
            android:id="@+id/product_detail_action_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back"
            android:backgroundTint="@color/white"
            />

        <TextView
            android:id="@+id/product_detail_app_bar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:text="Product Name" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:id="@+id/product_detail_content"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/product_detail_image_slider"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                />
            <LinearLayout
                android:background="@color/backgroundColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:orientation="vertical"
                android:paddingTop="30dp">
                <LinearLayout
                    android:id="@+id/dotsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:orientation="horizontal" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/product_detail_name"
                        android:layout_weight="6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Product Name"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        />
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_favorite"
                        android:layout_gravity="right"
                        app:tint="@color/red"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/product_detail_category"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Product Category"
                    />
                <TextView
                    android:id="@+id/product_detail_price"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textSize="16dp"
                    android:text="Product Price"
                    />
                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/product_detail_description"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    />
                <Button
                    android:id="@+id/btn_select_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingVertical="14dp"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:text="@string/select_size"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    app:cornerRadius="28dp"
                    android:backgroundTint="@color/white"
                    />
                <Button
                    android:id="@+id/btn_add_to_cart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:paddingVertical="14dp"
                    android:drawableEnd="@drawable/ic_bag"
                    android:drawableTint="@color/white"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    app:cornerRadius="28dp"
                    android:backgroundTint="@color/black"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>